<resources>
    <string name="app_name">MyAppStories</string>
    <string name="action_register">Register</string>
    <string name="title_dialog_error">Oops, something went wrong</string>
    <string name="error_empty_name">Please insert your name</string>
    <string name="error_empty_email">Please insert your email</string>
    <string name="error_invalid_email">The email is invalid</string>
    <string name="error_empty_password">Please insert your password</string>
    <string name="label_is_havent_account">Don\'t have an account?</string>
    <string name="label_is_have_account">Already have an account?</string>
    <string name="action_login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="action_to_register">Register here</string>
    <string name="action_to_login">Login here</string>
    <string name="label_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis nunc nec sodales consectetur. Sed eget auctor quam. Nulla facilisi. Etiam vitae nulla sed arcu varius tempus. Nullam ac diam ante. Donec condimentum cursus accumsan. Ut sit amet felis rutrum, posuere lorem sed</string>
    <string name="label_greeting_user">Hello, %1$s!</string>
    <string name="message_failed_take_picture">Failed to upload picture</string>
    <string name="message_unknown_state">Unknown state</string>
    <string name="message_not_permitted">Permission not granted</string>
    <string name="action_logout">Logout</string>
    <string name="message_logout_confirm">Are you sure you want to log out?</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="message_incorrect_auth">Incorrect email or password</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="title_new_stories">Add New Stories</string>
    <string name="title_detail_stories">Story Details</string>
    <string name="title_choose_a_picture">Choose a picture</string>
    <string name="message_success_upload">Upload successful</string>
    <string name="title_upload_info">Upload Information</string>
    <string name="action_upload_stories">Upload Stories</string>
    <string name="hint_description">Story Description</string>
    <string name="menu_setting">Settings</string>
    <string name="appwidget_text">Our Stories</string>
    <string name="empty_text">No Data</string>
    <string name="app_widget_description">Stories App Image Banner Widget</string>
    <string name="title_settings">Settings</string>
    <string name="error_password_more_6">Password must be more than 6 characters</string>
    <string name="label_nama">Name</string>
    <string name="title_message">Information</string>
    <string name="message_register_success">Registration successful</string>
    <string name="message_pick_image">Pick an image</string>
    <string name="error_desc_empty">Description cannot be empty</string>
    <string name="content_desc">Description</string>
    <string name="stories_s_illustration">Content Picture</string>
    <string name="content_tittle">Title</string>
    <string name="content_date">Date</string>
    <string name="welcome_tag">Welcome</string>
    <string name="login_continue">Please log in to continue</string>
    <string name="register_text">Please register to continue</string>
    <string name="title_home">Stories</string>
    <string name="title_add_stories">Add Stories</string>
    <string name="img_back">Back Button</string>
    <string name="your_email">Your Email...</string>
    <string name="account_icon">Account</string>
    <string name="setting_icon">Settings</string>
    <string name="insert_email">Insert Email</string>
    <string name="your_name">Name...</string>
    <string name="error_less_than_eight">Password must be at least 8 characters</string>
    <string name="no_data">No Data</string>
    <string name="stories_not_found_error">Stories Not Found</string>
    <string name="send_location">Send Location</string>
    <string name="language_button">Language</string>
    <string name="maps_title">Maps</string>
    <string name="add">Add</string>
    <string name="error_register_login">Please correct your registration format</string>
    <string name="login_success_message">Login Successful</string>
    <string name="login_error_message">Login Failed</string>
    <string name="satellite_icon">Satellite</string>
    <string name="activate_location">Please activate your location</string>
    <string name="registration_success">Registration Successful</string>
    <string name="registration_error_message">Registration Failed</string>
    <string name="error_empty_image">Please Insert Image</string>
    <string name="message_failed_upload">Failed to upload</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="title_profile">Profile</string>
    <string name="retry">Please Retry</string>
</resources>