<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvWelcomeTitle"
        style="@style/StoriesTextContent.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/welcome_tag"
        android:textSize="@dimen/dimen_24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcomeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StoriesTextContent.EditTextTitle"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/register_text"
        android:textSize="@dimen/dimen_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeTitle" />

    <com.dicoding.myappstories.ui.customview.CustomViewDefault
        android:id="@+id/edtName"
        style="@style/edit_text"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/your_name"
        android:maxLines="1"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintBottom_toTopOf="@+id/edtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeDesc"
        app:layout_constraintVertical_bias="1.0" />

    <com.dicoding.myappstories.ui.customview.CustomViewEmail
        android:id="@+id/edtEmail"
        style="@style/edit_text"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/insert_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.dicoding.myappstories.ui.customview.CustomViewPassword
        android:id="@+id/edtPassword"
        style="@style/edit_text"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/button_style"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/bg_button"
        android:text="@string/action_register"
        android:translationZ="0dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <LinearLayout
        android:id="@+id/layoutTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister">

        <TextView
            android:id="@+id/tvIsHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:textColor="@color/darker_orange"
            android:text="@string/label_is_have_account"/>

        <TextView
            android:id="@+id/tvToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/light_orange"
            style="@style/button_style"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:text="@string/action_to_login"/>

    </LinearLayout>

    <View
        android:id="@+id/bg_dim"
        android:visibility="gone"
        android:background="@color/colorBlackDim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/dimen_2dp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>