<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_nav"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.myappstories.ui.fragment.HomepageFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_homepage">
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/navigation_profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.myappstories.ui.fragment.SettingsPageFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_settings_page">

        <action
            android:id="@+id/action_profileFragment_to_homeFragment"
            app:destination="@id/navigation_home"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/navigation_home"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_add_stories"
        android:name="com.dicoding.myappstories.ui.fragment.AddStoriesFragment"
        android:label="@string/title_add_stories"
        tools:layout="@layout/fragment_add_stories">

        <action
            android:id="@+id/action_addStoriesFragment_to_profileFragment"
            app:destination="@id/navigation_profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.dicoding.myappstories.ui.fragment.MapsPageFragment"
        android:label="@string/maps_title"
        tools:layout="@layout/fragment_maps_page">

        <action
            android:id="@+id/action_mapsFragment_to_profileFragment"
            app:destination="@id/navigation_profile"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false" />

    </fragment>


</navigation>