<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.DetailStoriesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imgBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/img_back"
            android:padding="2dp"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvGreetingName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvGreetingName" />

        <TextView
            android:id="@+id/tvGreetingName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_detail_stories"
            android:textColor="@color/light_orange"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imgBack"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgStoriesThumbnail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="16dp"
        android:transitionName="content"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvStoriesTitle"
        style="@style/StoriesTextContent.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:textSize="@dimen/dimen_24sp"
        android:transitionName="title"
        android:layout_gravity="center"
        tools:text="Stories Title" />

    <TextView
        android:id="@+id/tvStoriesDesc"
        tools:text="@string/label_lorem_ipsum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:transitionName="description"
        style="@style/StoriesTextContent.Desc"
        android:layout_marginHorizontal="@dimen/dimen_16dp"/>

</LinearLayout>